[gd_scene load_steps=8 format=3 uid="uid://4j2ehcmqdnou"]

[ext_resource type="Texture2D" uid="uid://c3o0jfmfg20i1" path="res://assets/ui/panel_beige.png" id="1_wxult"]
[ext_resource type="Script" uid="uid://pl8gjnlu0mw3" path="res://scenes/level_button/level_buttons.gd" id="2_b4sg8"]
[ext_resource type="LabelSettings" uid="uid://dhnw1861dw4if" path="res://assets/lg_48_white.tres" id="2_rm2cj"]
[ext_resource type="LabelSettings" uid="uid://do0h5eqf556sg" path="res://assets/lg_24_white.tres" id="3_b4sg8"]

[sub_resource type="Animation" id="Animation_b4sg8"]
resource_name = "Fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_gig11"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4jrgj"]
_data = {
&"Fade": SubResource("Animation_b4sg8"),
&"RESET": SubResource("Animation_gig11")
}

[node name="LevelButtons" type="TextureButton"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(50, 50)
texture_normal = ExtResource("1_wxult")
script = ExtResource("2_b4sg8")

[node name="MC" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MC"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="MC/VBoxContainer"]
layout_mode = 2
text = "3"
label_settings = ExtResource("2_rm2cj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="MC/VBoxContainer"]
layout_mode = 2
text = "1000"
label_settings = ExtResource("3_b4sg8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Fade" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_4jrgj")
}

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
